--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
             .full {
                 display:block;
                 height: 100vh;
-                width: 100vw;
                 object-fit: cover;
                 object-position: top;
             }
@@ -61,5 +60,6 @@
         </script>
 
         <div class="page"><img class="full" src="1.png" alt="1"></div>
+        <div class="page"><img class="full" src="image.png" alt="1"></div>
     </body>
     </html>
