--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 height: 100vh;
                 object-fit: cover;
                 object-position: top;
+                max-width: fit-content;
+                margin-left: auto;
+                margin-right: auto;
             }
         </style>
     </head>
