--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
     <head>
         <style>
+            * {
+                background-color: transparent;
+            }
+            
             body, html { 
                 height: 100%; 
                 overflow: hidden; 
