ooh owee my finger is burning IRL i was dumb and tochod hot hot clue now it all burn, typing without index finger rn

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
         </script>
 
         <div class="page"><img class="full" src="1.png" alt="1"></div>
-        <div class="page"><img class="full" src="image.png" alt="1"></div>
-        <div class="page"><img class="full" src="unnamed.png" alt="1"></div>
+        <div class="page"><img class="full" src="kindaGayNGL.png" alt="homoGSL"></div>
+        <div class="page"><img class="full" src="unnamed.png" alt="momey"></div>
+        <div class="page"><img class="full" src="Screenshot 2024-12-09 1.36.03 PM.png" alt="merica"></div>
     </body>
     </html>
